--- a/app/css/app.css
+++ b/app/css/app.css
@@ -53,8 +53,15 @@
   text-align: center;
   font-size: 22px;
   font-weight: 400;
-  line-height: 60px;
+  line-height: 50px;
   white-space: nowrap;
+}
+.app-pattern-header .heading .small {
+  display: block;
+  margin-top: -8px;
+  font-size: 10px;
+  line-height: 10px;
+  opacity: 0.7;
 }
 .app-pattern-header .utils {
   width: auto;
