fixed time display service calculation error on days and link back to main

--- a/app/partials/pattern.html
+++ b/app/partials/pattern.html
@@ -3,7 +3,7 @@
 	<!-- pattern editor -->
 	<div class="app-pattern-header">
 		<div class="utils"><!--
-		--><a href="#" class="btnIcon" title="Back to main"><i class="icon ion-grid"></i></a><!--
+		--><a href="#home" class="btnIcon" title="Back to main"><i class="icon ion-grid"></i></a><!--
 		--></div>
 		<div class="utils"><!--
 			--><a href="" class="btnIcon" title="Save to cloud"
