--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -4,3 +4,7 @@ $themeBlue: #2a9fd8;
 //transition and animations
 $transSpeed: 0.25s;
 $transEasing: ease-in-out;
+
+//layout
+$appMinWidth: 650px;
+$settingsWidth: 250px;
