--- a/app/partials/pattern.html
+++ b/app/partials/pattern.html
@@ -6,10 +6,12 @@
 		--><a href="#home" class="btnIcon" title="Back to main"><i class="icon ion-grid"></i></a><!--
 		--></div>
 		<div class="utils"><!--
-			--><a href="" class="btnIcon" title="Save to cloud"
-				ng-click="save()"><i class="icon ion-ios-cloud-upload-outline"></i></a><!--
 			--><a href="" class="btnIcon" title="Revert changes"
 				ng-click="revert()"><i class="icon ion-ios-undo-outline"></i></a><!--
+			--><a href="" class="btnIcon" title="Save to cloud"
+				ng-click="save()"><i class="icon ion-ios-cloud-upload-outline"></i></a><!--
+			--><a href="" class="btnIcon" title="More Settings"
+				ng-click="toggleSettings()"><i class="icon ion-ios-more-outline"></i></a><!--
 		--></div>
 		<h1 class="heading">
 			<span ng-bind="::pattern.title"></span>
@@ -35,4 +37,9 @@
 	<div class="app-pattern-display">
 		<iframe id="app-pattern-display"></iframe>
 	</div>
+</div>
+
+<!-- settings -->
+<div class="app-settings" id="app-settings_{{::pattern.id}}">
+	settings
 </div>
