--- a/app/css/app.css
+++ b/app/css/app.css
@@ -11,6 +11,15 @@ html {
   height: 100%;
 }
 
+body {
+  color: #000;
+  background: #fff;
+  font-family: "Lato", sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 1.45;
+}
+
 *, *:before, *:after {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -34,12 +43,165 @@ html {
   font-size: 32px;
   line-height: 60px;
   text-align: center;
-  -webkit-transition: all 0.25s ease-in-out 0.3s ease-in-out;
-  transition: all 0.25s ease-in-out 0.3s ease-in-out;
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
   text-decoration: none !important;
 }
-.btnIcon:hover {
+.btnIcon:hover, .btnIcon.active {
+  background: #2080af;
+}
+
+/*
+# typography
+** basic type module styles **
+*/
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
+  margin: 1.414em 0 0.5em;
+  color: inherit;
+  font-weight: 600;
+  font-style: normal;
+  line-height: 1.2;
+}
+
+h1, .h1 {
+  font-size: 52px;
+}
+
+h2, .h2 {
+  font-size: 37px;
+}
+
+h3, .h3 {
+  font-size: 26px;
+}
+
+h4, .h4 {
+  font-size: 21px;
+}
+
+h5, .h5 {
+  font-size: 14px;
+}
+
+h6, .h6 {
+  font-size: 12px;
+}
+
+p {
+  font-weight: 400;
+  font-size: 13px;
+  margin-bottom: 1.3em;
+}
+
+/*
+# Form
+** all form styles **
+*/
+fieldset {
+  display: block;
+  position: relative;
+  margin: 0 0 7.5px 0;
+  padding: 0;
+  border: none;
+}
+
+label {
+  display: block;
+  font-size: 13px;
+  font-weight: 300;
+  margin: 0 0 5px 0;
+  padding: 0;
+}
+
+input {
+  display: block;
+  width: 100%;
+  margin: 0 0 7.5px 0;
+  padding: 7px;
+  color: rgba(255, 255, 255, 0.75);
+  background: rgba(255, 255, 255, 0.2);
+  border: 1px solid transparent;
+  font-size: 18px;
+  font-weight: 400;
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+}
+input:focus {
+  color: inherit;
   background: rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(255, 255, 255, 0.6);
+  outline: none;
+}
+input[readonly], input[readonly]:focus {
+  color: rgba(255, 255, 255, 0.75);
+  background: transparent;
+  border-color: rgba(255, 255, 255, 0.2);
+  cursor: not-allowed;
+}
+
+select {
+  display: block;
+  width: 100%;
+  margin: 0 0 7.5px 0;
+  padding: 7px;
+  color: rgba(255, 255, 255, 0.75);
+  background: rgba(255, 255, 255, 0.2);
+  border: 1px solid transparent;
+  font-size: 18px;
+  font-weight: 400;
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+}
+select:focus {
+  color: inherit;
+  background: rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(255, 255, 255, 0.6);
+  outline: none;
+}
+
+/*
+# Sections
+** section blocks **
+*/
+.app-sec {
+  display: block;
+  position: relative;
+  margin: 0;
+  padding: 15px;
+}
+
+/*
+# Container
+** overall app containers **
+*/
+.app,
+.app-view {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.app-view {
+  min-width: 650px;
+  overflow: hidden;
+}
+.app-view .app-pattern,
+.app-view .app-settings {
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+}
+
+.app-view.settingsActive .app-pattern {
+  width: calc( 100% - 250px );
+}
+.app-view.settingsActive .app-settings {
+  -webkit-transform: translateX(0);
+  -ms-transform: translateX(0);
+  transform: translateX(0);
 }
 
 /*
@@ -136,43 +298,27 @@ html {
   overflow: hidden;
   z-index: 100;
   color: #fff;
-  background: #2a9fd8;
+  background: #2080af;
   -webkit-transform: translateX(100%);
   -ms-transform: translateX(100%);
   transform: translateX(100%);
 }
-
-/*
-# Container
-** overall app containers **
-*/
-.app,
-.app-view {
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
+.app-settings .app-sec {
+  border-top: 1px solid #228abc;
 }
-
-.app-view {
-  min-width: 650px;
-  overflow: hidden;
+.app-settings .app-sec:first-child {
+  border-top: none;
 }
-.app-view .app-pattern,
-.app-view .app-settings {
-  -webkit-transition: all 0.25s ease-in-out;
-  transition: all 0.25s ease-in-out;
+.app-settings .heading {
+  font-weight: 300;
+  text-transform: uppercase;
+  margin: 15px 0;
 }
-
-.app-view.settingsActive .app-pattern {
-  width: calc( 100% - 250px );
+.app-settings .heading:first-child {
+  margin-top: 0;
 }
-.app-view.settingsActive .app-settings {
-  -webkit-transform: translateX(0);
-  -ms-transform: translateX(0);
-  transform: translateX(0);
+.app-settings .heading:last-child {
+  margin-bottom: 0;
 }
 
 /*# sourceMappingURL=app.css.map */
