--- a/app/scss/_buttons.scss
+++ b/app/scss/_buttons.scss
@@ -20,10 +20,11 @@
 	line-height: 60px;
 	text-align: center;
 
-	@include transition(all $transSpeed $transEasing);
+	@include transition();
 
 	text-decoration: none!important;
-	&:hover {
-		background: rgba(0,0,0,0.2);
+	&:hover,
+	&.active {
+		background:  darken($themeBlue, 10%);
 	}
 }
