--- a/app/scss/_reset.scss
+++ b/app/scss/_reset.scss
@@ -9,6 +9,16 @@ html {
 	height: 100%;
 }
 
+// body
+body {
+	color: #000;
+	background: #fff;
+	font-family: $baseFontFamily;
+	font-size: $baseFontSize;
+	font-weight: 400;
+	line-height: 1.45;
+}
+
 // box model
 * {
 	&,
