--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,5 +1,6 @@
 //colors
 $themeBlue: #2a9fd8;
+$invalid: #f00;
 
 //typography
 $baseFontSize: 13px;
@@ -11,5 +12,5 @@ $transEasing: ease-in-out;
 
 //layout
 $appMinWidth: 650px;
-$settingsWidth: 250px;
+$settingsWidth: 300px;
 $gutterSize: 15px;
