--- a/app/scss/_pattern.scss
+++ b/app/scss/_pattern.scss
@@ -38,6 +38,12 @@
 		line-height: 50px;
 		@include text-truncate();
 
+		//title text
+		.title {
+			display: block;
+			height: 50px;
+		}
+
 		//secondary text
 		.small {
 			display: block;
