--- a/app/scss/_settings.scss
+++ b/app/scss/_settings.scss
@@ -25,7 +25,7 @@
 
 	//sec
 	.app-sec {
-		border-top: 1px solid darken($themeBlue, 7%);
+		border-top: 1px solid darken($themeBlue, 5%);
 		&:first-child {
 			border-top: none;
 		}
@@ -34,13 +34,22 @@
 	//heading
 	.heading {
 		font-weight: 300;
-		text-transform: uppercase;
+		text-transform: capitalize;
 		margin: 15px 0;
 		&:first-child {
 			margin-top: 0;
 		}
 		&:last-child {
 			margin-bottom: 0;
+		}
+	}
+
+	//label
+	label {
+		.value {
+			display: inline-block;
+			margin-left: 5px;
+			font-weight: 600;
 		}
 	}
 }
