--- a/app/scss/_buttons.scss
+++ b/app/scss/_buttons.scss
@@ -25,6 +25,6 @@
 	text-decoration: none!important;
 	&:hover,
 	&.active {
-		background:  darken($themeBlue, 10%);
+		background:  darken($ios7Blue, 10%);
 	}
 }
