--- a/app/partials/pattern.html
+++ b/app/partials/pattern.html
@@ -79,9 +79,10 @@
 			</fieldset>
 		</form>
 	</div>
-	<!-- settings -->
+	<!-- settings
 	<div class="app-sec" id="app-settings-comments">
 		<h3 class="heading">Comments</h3>
 		<p>TBC</p>
 	</div>
+	 -->
 </div>
