--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -2,7 +2,7 @@
 //colors
 @import "_ios7colors.scss";
 $themeBlue: #2a9fd8;
-$invalid: #f00;
+$invalid: $ios7Red;
 
 //typography
 $baseFontSize: 13px;
