--- a/app/scss/_forms.scss
+++ b/app/scss/_forms.scss
@@ -4,7 +4,7 @@
 */
 
 // placeholders
-@include placeholder( rgba(255,255,255,0.5), italic );
+@include placeholder( rgba(0,0,0,0.5), italic );
 
 // fieldset
 fieldset {
@@ -32,34 +32,23 @@ input {
 	margin: 0 0 $gutterSize/2 0;
 	padding: 7px;
 	color: rgba(255,255,255,0.75);
-	background: rgba(255,255,255,0.20);
-	border: 1px solid transparent;
+	background: rgba(255,255,255,0.2);
+	border: none;
 	font-size: 18px;
 	font-weight: 400;
 	@include transition();
 
 	//interaction
 	&:focus {
-		color: inherit;
-		background: rgba(0,0,0,0.2);
-		border: 1px solid rgba(255,255,255,0.6);
+		color: #000;
+		background: #fff;
 		outline: none;
-	}
-
-	//readonly
-	&[readonly] {
-		&,
-		&:focus {
-			color: rgba(255,255,255,0.75);
-			background: transparent;
-			border-color: rgba(255,255,255,0.2);
-			cursor: not-allowed;
-		}
 	}
 
 	//validation
 	&.ng-dirty.ng-invalid {
-		border-color: $invalid;
+		background: #fff;
+		@include placeholder( $invalid, italic, true );
 	}
 
 	//checkbox
@@ -81,17 +70,16 @@ select {
 	margin: 0 0 $gutterSize/2 0;
 	padding: 7px;
 	color: rgba(255,255,255,0.75);
-	background: rgba(255,255,255,0.20);
-	border: 1px solid transparent;
+	background: rgba(255,255,255,0.2);
+	border: none;
 	font-size: 18px;
 	font-weight: 400;
 	@include transition();
 
 	//interaction
 	&:focus {
-		color: inherit;
-		background: rgba(0,0,0,0.20);
-		border: 1px solid rgba(255,255,255,0.6);
+		color: #000;
+		background: #fff;
 		outline: none;
 	}
 }
