--- a/app/scss/_mixins.scss
+++ b/app/scss/_mixins.scss
@@ -32,11 +32,19 @@
 }
 
 // input placeholder
-@mixin placeholder($color:#000, $style:normal) {
-	::-webkit-input-placeholder { color: #{$color}; font-style:#{$style}; }
-	:-moz-placeholder { color: #{$color}; font-style:#{$style}; }
-	::-moz-placeholder { color: #{$color}; font-style:#{$style}; }
-	:-ms-input-placeholder { color: #{$color}; font-style:#{$style}; }
+@mixin placeholder($color:#000, $style:normal, $target:null) {
+	@if ($target != null) {
+		&::-webkit-input-placeholder { color: #{$color}; font-style:#{$style}; }
+		&:-moz-placeholder { color: #{$color}; font-style:#{$style}; }
+		&::-moz-placeholder { color: #{$color}; font-style:#{$style}; }
+		&:-ms-input-placeholder { color: #{$color}; font-style:#{$style}; }
+	}
+	@else {
+		::-webkit-input-placeholder { color: #{$color}; font-style:#{$style}; }
+		:-moz-placeholder { color: #{$color}; font-style:#{$style}; }
+		::-moz-placeholder { color: #{$color}; font-style:#{$style}; }
+		:-ms-input-placeholder { color: #{$color}; font-style:#{$style}; }
+	}
 }
 
 // Transform combined mixin
