--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,1 +1,33 @@
-<a href="#pattern">Pattern</a>
+<!-- dashboard container -->
+<div class="app-dash" id="app-dash">
+	<!-- dashboard header -->
+	<div class="app-dash-header">
+		<h1 class="logo ir" title="Pattern Playground">PP</h1>
+	</div>
+	<!-- dashboard main -->
+	<div class="app-dash-main">
+		<!-- pattern list -->
+		<div class="app-patterns-list cfix">
+			<div class="btnPattern">
+				<a class="title" href="#pattern">Title</a>
+				<span class="repo"><i class="ion-folder"></i>Repo</span>
+				<span class="date"><i class="ion-calendar"></i>Date</span>
+				<span class="author"><i class="ion-person"></i>Author</span>
+				<div class="utils">
+					<a href="#pattern" title="View/Edit"><i class="ion-eye"></i></a>
+					<a href="#newPattern" title="Duplicate"><i class="ion-fork-repo"></i></a>
+					<a href="" ng-click="" title="Remove"><i class="ion-trash-a"></i></a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- dashboard aside
+	<div class="app-dash-aside">
+		<h3>aside</h3>
+	</div>
+	-->
+	<!-- dashboard footer -->
+	<div class="app-dash-footer">
+
+	</div>
+</div>
