--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -13,5 +13,9 @@
 
 //app modules
 @import "_container.scss";
+@import "_dash.scss";
 @import "_pattern.scss";
 @import "_settings.scss";
+
+//helpers
+@import "_helpers.scss";
