--- a/app/partials/dash.html
+++ b/app/partials/dash.html
@@ -9,14 +9,14 @@
 		<!-- pattern list -->
 		<div class="app-patterns-list cfix">
 			<div class="btnPattern">
-				<a class="title" href="#pattern">Title</a>
-				<span class="repo"><i class="ion-folder"></i>Repo</span>
-				<span class="date"><i class="ion-calendar"></i>Date</span>
-				<span class="author"><i class="ion-person"></i>Author</span>
-				<div class="utils">
-					<a href="#pattern" title="View/Edit"><i class="ion-eye"></i></a>
-					<a href="#newPattern" title="Duplicate"><i class="ion-fork-repo"></i></a>
-					<a href="" ng-click="" title="Remove"><i class="ion-trash-a"></i></a>
+				<a class="title" href="#pattern">My Hello Pattern!</a>
+				<span class="info repo"><b>Repo</b>Bootstrap 3.3.1</span>
+				<span class="info author"><b>Author</b>JohnnyX</span>
+				<span class="info date"><b>Updated</b>Fri Dec 19 2014</span>
+				<div class="actions">
+					<a class="btnAction view ion-eye" href="#pattern" title="View/Edit"></a>
+					<a class="btnAction copy ion-fork-repo" href="#newPattern" title="Duplicate"></a>
+					<a class="btnAction remove ion-trash-a" href="" ng-click="" title="Remove"></a>
 				</div>
 			</div>
 		</div>
