--- a/app/scss/_dash.scss
+++ b/app/scss/_dash.scss
@@ -14,7 +14,7 @@
 	width: 100%;
 	margin: 0;
 	padding: 0;
-	background: fade-out($ios7Silver, 0.85);
+	background: fade-out($ios7Silver, 0.95);
 }
 
 // container
@@ -28,7 +28,7 @@
 	top: 0;
 	height: 80px;
 	color: #fff;
-	background: #fff;
+	background: $ios7Blue;
 	z-index: 10;
 
 	//brand logo
@@ -41,8 +41,7 @@
 		margin: 0 0 -30px -45px;
 		padding: 0;
 		overflow: hidden;
-		color: $ios7Yellow;
-		background: $ios7Blue;
+		background: #fff;
 		border-radius: 50%;
 		text-align: center;
 		line-height: 90px;
@@ -86,7 +85,7 @@
 	display: inline-block;
 	position: relative;
 	width: 230px;
-	height: 12em;
+	height: 120px;
 	margin: 10px;
 	padding: 0.75em 1.5em;
 	background: #fff;
@@ -94,24 +93,15 @@
 	line-height: 1.5em;
 	@include box-shadow( 0 2px 4px rgba(0,0,0,0.1) );
 	@include transition( all, $transSpeed );
+	border-radius: 2px;
 
-	>.utils {
-		display: block;
-		position: absolute;
-		top: 0;
-		right: 0;
-		width: 0;
-		height: 100%;
-		overflow: hidden;
-		opacity: 0;
-		@include transition( all, $transSpeed );
-	}
 
+	//common text
 	>span,
 	>a {
 		display: block;
 		width: 100%;
-		margin: 0 0 5px 0;
+		margin: 0 0 1px 0;
 		color: $ios7Gray;
 		font-weight: 400;
 		line-height: 1.5em;
@@ -124,23 +114,96 @@
 			color: $ios7Silver;
 		}
 	}
+
+	//title text
 	>.title {
 		color: $ios7Purple;
 		margin: 5px 0 10px 0;
-		padding: 0 0 10px 0;
+		// padding: 0 0 10px 0;
 		font-size: 18px;
 		font-weight: 600;
 		line-height: 1.25em;
-		border-bottom: 1px solid lighten($ios7Silver, 10%);
-		white-space: normal;
+		// border-bottom: 1px solid lighten($ios7Silver, 10%);
 		&:hover {
 			color: $ios7Pink;
 		}
 	}
 
+	//info text
+	>.info {
+		b {
+			// color: #000;
+			display: inline-block;
+			width: 65px;
+		}
+	}
+
+	//actions container
+	>.actions {
+		display: block;
+		position: absolute;
+		top: 0;
+		right: 0;
+		width: 0;
+		height: 100%;
+		overflow: hidden;
+		opacity: 0;
+		@include transition( all, $transSpeed );
+	}
+
+	//action button
+	.btnAction {
+		//common
+		&,
+		&:before {
+			display: block;
+			width: 40px;
+			height: 40px;
+			margin: 0 auto;
+			padding: 0;
+			overflow: hidden;
+			font-size: 24px;
+			line-height: 40px;
+			text-align: center;
+			text-decoration: none!important;
+		}
+
+		//btn
+		@include transition();
+
+		//icon
+		&.view {
+			color: $ios7Blue;
+			background: fade-out($ios7Blue, 0.85);
+		}
+		&.copy {
+			color: $ios7Orange;
+			background: fade-out($ios7Orange, 0.85);
+		}
+		&.remove {
+			color: $ios7Red;
+			background: fade-out($ios7Red, 0.85);
+		}
+		//interactions
+		&:hover {
+			color: #fff;
+			&.view {
+				background: $ios7Blue;
+			}
+			&.copy {
+				background: $ios7Orange;
+			}
+			&.remove {
+				background: $ios7Red;
+			}
+		}
+	}
+
+	//interactions
 	&:hover {
 		padding-right: 40px;
-		.utils {
+		@include box-shadow( 0 4px 6px rgba(0,0,0,0.2) );
+		.actions {
 			width: 40px;
 			opacity: 1;
 		}
