added logo image and styles

--- a/app/partials/dash.html
+++ b/app/partials/dash.html
@@ -2,7 +2,9 @@
 <div class="app-dash" id="app-dash">
 	<!-- dashboard header -->
 	<div class="app-dash-header">
-		<h1 class="logo ir" title="Pattern Playground">PP</h1>
+		<h1 class="logo" title="Pattern Playground">
+			<img src="imgs/logo.svg" alt="" width="90" height="90">
+		</h1>
 	</div>
 	<!-- dashboard main -->
 	<div class="app-dash-main">
