--- a/app/partials/dash.html
+++ b/app/partials/dash.html
@@ -10,7 +10,7 @@
 	<div class="app-dash-main">
 		<!-- pattern list -->
 		<div class="app-patterns-list cfix">
-			<div class="btnPattern">
+			<div class="btnPattern new">
 				<a class="title" href="#pattern">My Hello Pattern!</a>
 				<span class="info repo"><b>Repo</b>Bootstrap 3.3.1</span>
 				<span class="info author"><b>Author</b>JohnnyX</span>
