--- a/app/partials/pattern.html
+++ b/app/partials/pattern.html
@@ -3,6 +3,9 @@
 	<!-- pattern editor -->
 	<div class="app-pattern-header">
 		<div class="utils"><!--
+		--><span class="logo" title="Pattern Playground">
+			<img src="imgs/logo.svg" alt="" width="50" height="50">
+		</span><!--
 		--><a href="#home" class="btnIcon" title="Back to main"><i class="icon ion-grid"></i></a><!--
 		--></div>
 		<div class="utils"><!--
