--- a/app/scss/_buttons.scss
+++ b/app/scss/_buttons.scss
@@ -28,3 +28,164 @@
 		background:  darken($ios7Blue, 10%);
 	}
 }
+
+// btn pattern
+.btnPattern {
+	display: inline-block;
+	position: relative;
+	width: 230px;
+	height: 120px;
+	margin: 10px;
+	padding: 0.75em 1.5em;
+	color: $ios7Purple;
+	background: #fff;
+	border-top: 2px solid currentColor;
+	font-size: 13px;
+	line-height: 1.5em;
+	// border-radius: 2px;
+	@include box-shadow( 0 2px 4px rgba(0,0,0,0.1) );
+	@include transition( all, $transSpeed );
+
+	//common text
+	>span,
+	>a {
+		display: block;
+		width: 100%;
+		margin: 0 0 1px 0;
+		color: $ios7Gray;
+		font-weight: 400;
+		line-height: 1.5em;
+		text-decoration: none;
+		@include text-truncate();
+		@include transition( all, $transSpeed );
+		i {
+			display: inline-block;
+			width: 16px;
+			color: $ios7Silver;
+		}
+	}
+
+	//title text
+	>.title {
+		color: inherit;
+		margin: 5px 0 10px 0;
+		font-size: 18px;
+		font-weight: 600;
+		line-height: 1.25em;
+		@include transition( none );
+	}
+
+	//info text
+	>.info {
+		b {
+			// color: #000;
+			display: inline-block;
+			width: 65px;
+		}
+	}
+
+	//actions container
+	>.actions {
+		display: block;
+		position: absolute;
+		top: 0;
+		right: 0;
+		width: 0;
+		height: 100%;
+		overflow: hidden;
+		opacity: 0;
+		@include transition( all, $transSpeed );
+		//shadow
+		&:after {
+			content: '';
+			display: block;
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			width: 2px;
+			background: rgba(0,0,0,0.03);
+		}
+	}
+
+	//action button
+	.btnAction {
+		//common
+		&,
+		&:before {
+			display: block;
+			width: 40px;
+			height: 40px;
+			margin: 0 auto;
+			padding: 0;
+			overflow: hidden;
+			font-size: 24px;
+			line-height: 40px;
+			text-align: center;
+			text-decoration: none!important;
+		}
+
+		//btn
+		@include transition();
+
+		//icon
+		&.view {
+			color: $ios7Blue;
+			background: fade-out($ios7Blue, 0.85);
+		}
+		&.copy {
+			color: $ios7Orange;
+			background: fade-out($ios7Orange, 0.85);
+		}
+		&.remove {
+			color: $ios7Red;
+			background: fade-out($ios7Red, 0.85);
+		}
+		//interactions
+		&:hover {
+			color: #fff;
+			&.view {
+				background: $ios7Blue;
+			}
+			&.copy {
+				background: $ios7Orange;
+			}
+			&.remove {
+				background: $ios7Red;
+			}
+		}
+	}
+
+	//interactions
+	&:hover {
+		color: $ios7Pink;
+		padding-right: 40px;
+		@include box-shadow( 0 4px 6px rgba(0,0,0,0.2) );
+		.actions {
+			width: 40px;
+			opacity: 1;
+		}
+	}
+
+	//new
+	&.new {
+		&:before {
+			content: 'new';
+			display: inline-block;
+			position: absolute;
+			top: -15px;
+			left: 0px;
+			width: auto;
+			max-width: 50%;
+			height: 15px;
+			margin: 0;
+			padding: 0 4px;
+			color: #fff;
+			background: $ios7Red;
+			font-size: 10px;
+			line-height: 15px;
+			text-transform: capitalize;
+			@include text-truncate();
+		}
+	}
+}
