--- a/app/scss/_pattern.scss
+++ b/app/scss/_pattern.scss
@@ -29,6 +29,24 @@
 	color: #fff;
 	background: $ios7Blue;
 
+	//brand logo
+	.logo {
+		display: inline-block;
+		width: 60px;
+		height: 60px;
+		margin: 0;
+		padding: 0;
+		overflow: hidden;
+		background: #fff;
+		img {
+			display: block;
+			width: 50px;
+			height: 50px;
+			margin: 5px;
+		}
+	}
+
+	//heading title
 	.heading {
 		max-width: 400px;
 		margin: 0 calc( 50% - 200px );
@@ -55,6 +73,7 @@
 		}
 	}
 
+	//utils
 	.utils {
 		width: auto;
 		float: right;
